update without rooms