@@ -88,7 +88,7 @@ public class HotelService {
                                 .findDistinctAllByAccommodationInAndCategoryIsNullAndComfortsIn(accommodations, comforts);
                         hotels.addAll(noStarHotels);
                         List<Hotel> noStarHotelsNotDistinct = this.hotelRepository
-                                .findAllByAccommodationInAndCategoryIsNullAndComfortsIn(accommodations,comforts);
+                                .findAllByAccommodationInAndCategoryIsNullAndComfortsIn(accommodations, comforts);
                         hotelsNotDistinct.addAll(noStarHotelsNotDistinct);
                     }
                 } else {
@@ -114,7 +114,7 @@ public class HotelService {
                                 .findDistinctAllByTownAndAccommodationInAndCategoryIsNullAndComfortsIn(town, accommodations, comforts);
                         hotels.addAll(noStarHotels);
                         List<Hotel> noStarHotelsNotDistinct = this.hotelRepository
-                                .findAllByTownAndAccommodationInAndCategoryIsNullAndComfortsIn(town, accommodations,comforts);
+                                .findAllByTownAndAccommodationInAndCategoryIsNullAndComfortsIn(town, accommodations, comforts);
                         hotelsNotDistinct.addAll(noStarHotelsNotDistinct);
                     }
                 } else {
@@ -310,7 +310,7 @@ public class HotelService {
         hotel.setCategory(category);
         Accommodation accommodation = Accommodation.valueOf(hotelAddDTO.getAccommodation());
         hotel.setAccommodation(accommodation);
-        List<String> images = Arrays.stream(hotelAddDTO.getImages().split("\n")).toList();
+        List<String> images = Arrays.stream(hotelAddDTO.getImages().split("\n")).collect(Collectors.toList());
         hotel.setImages(images);
         List<Comfort> comforts = new ArrayList<>();
         hotelAddDTO.getComforts().forEach(c -> {
@@ -319,24 +319,34 @@ public class HotelService {
             comforts.add(comfort);
         });
         hotel.setComforts(comforts);
-        List<Room> rooms = new ArrayList<>();
-        hotelAddDTO.getRooms().forEach(r -> {
-            Room room = new Room();
-            room.setRoomType(r.getRoomType());
-            room.setSeason(r.getSeason());
-            room.setPrice(r.getPrice());
-            if (room.getPrice() != null) {
-                room.setHotel(hotel);
-                rooms.add(room);
-            }
-        });
-        hotel.setRooms(rooms);
-        TownEnum townEnum = TownEnum.valueOf(hotelAddDTO.getTown());
-        Town town = this.townRepository.findByName(townEnum);
-        hotel.setTown(town);
+        //TODO Maybe later to do the rooms update
+//        List<Room> rooms = new ArrayList<>();
+//        hotelAddDTO.getRooms().forEach(r -> {
+//            List<Room> roomsByTypeAndSeason = roomRepository
+//                    .findByHotelIdAndRoomTypeAndSeason(hotel.getId(), r.getRoomType(), r.getSeason());
+//            roomsByTypeAndSeason.forEach(room -> {
+//                if (room.getRoomType().equals(r.getRoomType()) && room.getSeason().equals(r.getSeason())) {
+//                    room.setPrice(r.getPrice());
+//                }
+//            });
+//            Room room = new Room();
+//            room.setRoomType(r.getRoomType());
+//            room.setSeason(r.getSeason());
+//            room.setPrice(r.getPrice());
+//
+//            if (room.getPrice() != null && room.getPrice().compareTo(BigDecimal.ZERO) > 0
+//                    && !roomsByTypeAndSeason.contains(room)) {
+//                room.setHotel(hotel);
+//                rooms.add(room);
+//            }
+//        });
+//        hotel.setRooms(rooms);
+//        TownEnum townEnum = TownEnum.valueOf(hotelAddDTO.getTown());
+//        Town town = this.townRepository.findByName(townEnum);
+//        hotel.setTown(town);
 
         this.hotelRepository.save(hotel);
-        this.roomRepository.saveAll(rooms);
+//        this.roomRepository.saveAll(rooms);
 
         return hotelMapper.hotelToHotelViewDTO(hotel, new HotelViewDTO());
     }
@@ -354,7 +364,7 @@ public class HotelService {
             }
         }
 
-        return  sum.compareTo(BigDecimal.ZERO) > 0;
+        return sum.compareTo(BigDecimal.ZERO) > 0;
     }
 
     public List<HotelViewDTO> getAllBySea() {
